src/test/ui/associated-types/defaults-cyclic-fail.stderr
error[E0275]: overflow evaluating the requirement `<() as Tr>::B`
  --> $DIR/defaults-cyclic-fail.rs:10:6
   |
LL | impl Tr for () {}
   |      ^^

error[E0275]: overflow evaluating the requirement `<bool as Tr>::B`
  --> $DIR/defaults-cyclic-fail.rs:24:6
   |
LL | impl Tr for bool {
   |      ^^

error[E0275]: overflow evaluating the requirement `<bool as Tr>::B`
  --> $DIR/defaults-cyclic-fail.rs:26:5
   |
LL |     type A = Box<Self::B>;
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0275`.
